# datos

./: Cargo.toml
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs
src/: archivo.csv  main.rs
