[package]
name = "datos_personas"
version = "0.1.0"
authors = ["andres <andy_l3a@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

postgres = "0.17.5"
csv = "1.1"
serde = { version = "1", features = ["derive"] }